# Reinforcement_Learning_Policy_Optimization

./: .gitignore  ALGORITHMS.md  README.md  README_es.md  a2c_benchmark.py  a3c_benchmark.py  policy_gradient_benchmark.py  ppo_benchmark.py  pyproject.toml  rl_comparison.py  run_all_comparison.py  trpo_benchmark.py
benchmarks/: __init__.py  a2c.py  a3c.py  common.py  policy_gradient.py  ppo.py  trpo.py  trpo_core.py  trpo_native.py
doc/: 03_policy_gradient.md  04_a2c.md  05_a3c.md  06_ppo.md  07_trpo.md  README.md  book_extracted.txt  policy_gradient_line_by_line.md  policy_gradient_line_by_line_es.md  presentation_guide_60min.md  presentation_guide_60min_es.md  presentation_guide_part2_60min.md  presentation_guide_part2_60min_es.md
doc/es/: 03_policy_gradient.md  04_a2c.md  05_a3c.md  06_ppo.md  07_trpo.md  README.md
outputs/: aggregate_summary.json  comparison_results.json
outputs/report/: aggregate_report.md
outputs/smoke_policy5/: aggregate_summary.json  comparison_results.json
outputs/smoke_policy5/report/: aggregate_report.md
scripts/: aggregate_results.py  generate_aggregate_report.py
